fix: Returning field error details
