# openapi/p4pa-pu-bff.openapi.yaml
@@ -4420,6 +4420,7 @@ components:
       type: object
       required:
         - category
+        - code
         - message
       properties:
         category:
@@ -4431,12 +4432,31 @@ components:
             - GENERIC_ERROR
             - FORBIDDEN
             - CONFLICT
+            - UNAUTHORIZED
+            - TOO_MANY_REQUESTS
+        code:
+          type: string
         message:
           type: string
           description: Description of the error
+        fields:
+          type: array
+          items:
+            $ref: "#/components/schemas/ErrorFieldDTO"
         traceId:
           type: string
-        code:
+    ErrorFieldDTO:
+      type: object
+      required:
+        - field
+        - error
+        - message
+      properties:
+        field:
+          type: string
+        error:
+          type: string
+        message:
           type: string
     PagedDebtPositionTypeOrgWithCount:
       type: object
