# src/main/java/it/gov/pagopa/pu/bff/config/rest/HttpClientErrorJsonBodyHandler.java
@@ -1,0 +1,137 @@
+package it.gov.pagopa.pu.bff.config.rest;
+
+import it.gov.pagopa.pu.bff.exception.common.RestInvokeConflictException;
+import it.gov.pagopa.pu.bff.exception.common.RestInvokeForbiddenException;
+import it.gov.pagopa.pu.bff.exception.common.RestInvokeInvalidValueException;
+import it.gov.pagopa.pu.bff.exception.common.RestInvokeNotAuthorizedException;
+import it.gov.pagopa.pu.bff.security.SecurityUtils;
+import jakarta.annotation.Nonnull;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.client.ClientHttpResponse;
+import org.springframework.web.client.DefaultResponseErrorHandler;
+import org.springframework.web.client.HttpStatusCodeException;
+import org.springframework.web.client.ResponseErrorHandler;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.json.JsonMapper;
+
+import java.io.IOException;
+import java.net.URI;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.BiFunction;
+import java.util.function.Function;
+
+/** It will transcode Http client errors (see ignoredClientErrors for exceptions) using the provided transcoder. */
+@Slf4j
+public class HttpClientErrorJsonBodyHandler<T> extends DefaultResponseErrorHandler {
+
+  private final JsonMapper jsonMapper;
+  private final Class<T> errorDtoClass;
+  private final BiFunction<HttpStatusCodeException, T, RuntimeException> errorTranscoder;
+  private final ResponseErrorHandler errorHandler;
+
+  /**
+   * Skipped Http client errors:
+   * <li>404 is normally catch in order to transcode it as null
+   * <li>429 is handled by openApiGenerator code in order to retry it
+   */
+  private final Set<HttpStatusCode> ignoredClientErrors = Set.of(
+    HttpStatus.NOT_FOUND,
+    HttpStatus.TOO_MANY_REQUESTS
+  );
+
+  public HttpClientErrorJsonBodyHandler(
+    JsonMapper jsonMapper,
+    String applicationName,
+    boolean bodyPrinterWhenError,
+    Class<T> errorDtoClass,
+    Function<T, String> errorDto2CodeFunction,
+    Function<T, String> errorDto2MessageFunction
+  ) {
+    this(jsonMapper,
+      applicationName,
+      bodyPrinterWhenError,
+      errorDtoClass,
+      buildDefaultHttpClientExceptionTranscoder(applicationName, errorDto2CodeFunction, errorDto2MessageFunction)
+    );
+  }
+
+  public HttpClientErrorJsonBodyHandler(
+    JsonMapper jsonMapper,
+    String applicationName,
+    boolean bodyPrinterWhenError,
+    Class<T> errorDtoClass,
+    Function<T, PuErrorDTO> errorDtoNormalizer
+  ) {
+    this(jsonMapper, applicationName, bodyPrinterWhenError, errorDtoClass,
+      buildDefaultHttpClientExceptionTranscoder(applicationName, errorDtoNormalizer));
+  }
+
+  public HttpClientErrorJsonBodyHandler(JsonMapper jsonMapper, String applicationName, boolean bodyPrinterWhenError, Class<T> errorDtoClass, BiFunction<HttpStatusCodeException, T, RuntimeException> httpClientExceptionTranscoder) {
+    this.jsonMapper = jsonMapper;
+    this.errorDtoClass = errorDtoClass;
+    this.errorTranscoder = httpClientExceptionTranscoder;
+    this.errorHandler = bodyPrinterWhenError
+      ? RestTemplateConfig.bodyPrinterWhenError(applicationName)
+      : new DefaultResponseErrorHandler();
+  }
+
+  @Override
+  protected void handleError(@Nonnull ClientHttpResponse response, @Nonnull HttpStatusCode statusCode,
+                             URI url, HttpMethod method) throws IOException {
+    try {
+      errorHandler.handleError(url, method, response);
+    } catch (HttpStatusCodeException ex) {
+      if (statusCode.is4xxClientError() && !ignoredClientErrors.contains(statusCode)) {
+        try {
+          T errorDTO = jsonMapper.readValue(ex.getResponseBodyAsString(), errorDtoClass);
+          throw errorTranscoder.apply(ex, errorDTO);
+        } catch (JacksonException jacksonException) {
+          log.info("Cannot deserialize error response from request {} {} - {}",
+            method,
+            SecurityUtils.removePiiFromURI(url),
+            jacksonException.getMessage());
+          throw ex;
+        }
+      } else {
+        throw ex;
+      }
+    }
+  }
+
+  /** A default transcoder required to invoke {@link HttpClientErrorJsonBodyHandler} which will transcode the Http client error into a BaseBusinessException using code and message extracted from the errorDTO */
+  public static <T> BiFunction<HttpStatusCodeException, T, RuntimeException> buildDefaultHttpClientExceptionTranscoder(String applicationName, Function<T, String> errorDto2CodeFunction, Function<T, String> errorDto2MessageFunction) {
+    return buildDefaultHttpClientExceptionTranscoder(applicationName, errorDTO -> new PuErrorDTO(
+      null,
+      errorDto2CodeFunction != null ?
+        errorDto2CodeFunction.apply(errorDTO)
+        : null,
+      errorDto2MessageFunction.apply(errorDTO),
+      null
+    ));
+  }
+
+  /** A default transcoder required to invoke {@link HttpClientErrorJsonBodyHandler} which will transcode the Http client error into a BaseBusinessException using the errorDTO normalizer function */
+  public static <T> BiFunction<HttpStatusCodeException, T, RuntimeException> buildDefaultHttpClientExceptionTranscoder(
+    String applicationName,
+    Function<T, PuErrorDTO> errorDtoNormalizer
+  ) {
+    return (exception, errorDTO) -> {
+      PuErrorDTO puErrorDTO = errorDtoNormalizer.apply(errorDTO);
+
+      String code = Objects.requireNonNullElseGet(
+        puErrorDTO.code(),
+        () -> applicationName + "_" + ((HttpStatus) exception.getStatusCode()).name());
+
+      return switch (exception.getStatusCode()) {
+        case HttpStatus.CONFLICT -> new RestInvokeConflictException(applicationName, puErrorDTO.category(), code, puErrorDTO.message(), puErrorDTO.fields());
+        case HttpStatus.FORBIDDEN -> new RestInvokeForbiddenException(applicationName, puErrorDTO.category(), code, puErrorDTO.message());
+        case HttpStatus.UNAUTHORIZED -> new RestInvokeNotAuthorizedException(applicationName, puErrorDTO.category(), code, puErrorDTO.message());
+        default -> new RestInvokeInvalidValueException(applicationName, puErrorDTO.category(), code, puErrorDTO.message(), puErrorDTO.fields());
+      };
+    };
+  }
+}
