# src/main/java/it/gov/pagopa/pu/bff/exception/transcoder/handler/HttpMessageNotReadableExceptionMessageTranscoder.java
@@ -1,0 +1,41 @@
+package it.gov.pagopa.pu.bff.exception.transcoder.handler;
+
+import it.gov.pagopa.pu.bff.dto.generated.ErrorDTO;
+import it.gov.pagopa.pu.bff.dto.generated.ErrorFieldDTO;
+import it.gov.pagopa.pu.bff.exception.transcoder.ExceptionMessageTranscoded;
+import it.gov.pagopa.pu.bff.exception.transcoder.ExceptionMessageTranscoder;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.DatabindException;
+
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
+public class HttpMessageNotReadableExceptionMessageTranscoder implements ExceptionMessageTranscoder<HttpMessageNotReadableException> {
+
+  @Override
+  public ExceptionMessageTranscoded transcode(HttpMessageNotReadableException httpMessageNotReadableException) {
+    String errorMsg = "Required request body is missing";
+    List<ErrorFieldDTO> fields = null;
+    if (httpMessageNotReadableException.getCause() instanceof DatabindException jsonMappingException) {
+      String errorPath = jsonMappingException.getPath().stream()
+        .map(JacksonException.Reference::getPropertyName)
+        .collect(Collectors.joining("."));
+
+      String errorCode = Objects.requireNonNullElse(jsonMappingException.getCause(), jsonMappingException)
+        .getClass().getSimpleName().replace("Exception", "");
+
+      ErrorFieldDTO errorField = new ErrorFieldDTO(
+        errorPath,
+        errorCode,
+        jsonMappingException.getOriginalMessage());
+
+      errorMsg = "Cannot parse body. " + errorPath + ": " + errorField.getMessage();
+      fields = List.of(errorField);
+    } else if (httpMessageNotReadableException.getCause() instanceof JacksonException jacksonException) {
+      errorMsg = "Cannot parse body. " + jacksonException.getOriginalMessage();
+    }
+    return new ExceptionMessageTranscoded(ErrorDTO.CategoryEnum.BAD_REQUEST.getValue(), errorMsg, fields);
+  }
+}
